# S3_pattern

./: .gitignore  README.md  pyproject.toml
src/: main.py
