[tool.poetry]
name = "s3-pattern"
version = "0.1.0"
description = ""
authors = ["IgorPydata <igor.leschenko@dataacquisition.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.17"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
